# SmartAttendance

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
src/: main.cpp
src/db/: db.cpp  db.h
src/registration/: FaceRegistration.cpp  FaceRegistration.h
tests/: webcam_test.cpp
